--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Zhaoting LI"
   avatar           : "profile.png"
   bio              : "Super smart and hardworking guy"
   location         : "Harbin,China"
