--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhaoting LI"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Super smart and hardworking guy"
   location         : "Harbin,China"
   employer         :
