--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Zhaoting LI"
-  avatar           : "profile.jpg"
-  bio              : "Super smart and hardworking guy"
+  avatar           : "profile.JPG"
+  bio              : "A Super smart and hardworking guy"
   location         : "Harbin,China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
