--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,13 @@ analytics:
 author:
   name             : "Zhaoting LI"
   avatar           : "profile.JPG"
-  bio              : "A Super smart and hardworking guy"
+  bio              : "Third year undergraduate student at Harbin Insititute of Technology"
+  Major            : "Automation"
   location         : "Harbin,China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            :  "zhaoting_li@outlook.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -103,13 +104,11 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
@@ -209,10 +208,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
+  # _research
   - scope:
       path: ""
-      type: teaching
+      type: research 
     values:
       layout: single
       author_profile: true
@@ -227,10 +226,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _coursework
   - scope:
       path: ""
-      type: portfolio
+      type: coursework
     values:
       layout: single
       author_profile: true
