--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Coursework"
+    url: /coursework/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Research"
+    url: /research/    
     
   - title: "Portfolio"
     url: /portfolio/
@@ -18,5 +18,4 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+
