--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Zhaoting LI"
 title_separator          : "-"
 name                     : &name "Zhaoting LI"
-description              : &description "Third year undergraduate student at Harbin Insititute of Technology"
+description              : &description "Fourth year undergraduate student at Harbin Insititute of Technology"
 url                      : https://hitleo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hitleo/hitleo.github.io"
