--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zhaoting LI"
   avatar           : "profile.JPG"
-  bio              : "Third year undergraduate student at Harbin Insititute of Technology"
+  bio              : "Fourth year undergraduate student at Harbin Insititute of Technology"
   Major            : "Automation"
   location         : "Harbin,China"
   employer         :
