--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanan Zhao"
-  avatar           : "profile.JPG"
+  avatar           : "photo.png"
   bio              : "Incoming PhD student at McGill"
   Major            : "machine learning and signal processing"
   location         : "China"
